log/build_2022-04-07_17-19-28/xsens_driver/stderr.log
  File "/app/dev_ws/install/xsens_driver/lib/python3.8/site-packages/xsens_driver/xsens_measure.py", line 259
    while True
             ^
SyntaxError: invalid syntax

